test/Runner/errors/tests/MI/TestSuite/Prepare4.runtime.js
mi("Suite", () => {
	suite("Suite", () => {
		throw new Error();
	}, "foo")
});